infra_with_lb/nat.tf
resource "aws_eip" "eip" {
  vpc = true

}
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public_subnet1[0].id

}
