infra_with_lb/tomcat.tf
resource "aws_instance" "tomcat" {
  ami             = var.ami
  instance_type   = var.micro-instance_type
  key_name        = var.key_name
  subnet_id       = aws_subnet.private_subnet1[0].id
  security_groups = [aws_security_group.tomcat-sg.id]
  user_data       = file("tomcat.sh")

  tags = {
    Name = "tomcat"
  }
}
